@@ -1,4 +1,10 @@
 
+2003-05-30	Joel Becker <joel.becker@oracle.com>
+
+	* include/linux/osmkernel.h: Remove request_key_osm_ioc.
+	* kernel/osm.c: Remove request_key_osm_ioc.
+	* libosm/osmlib.c: Removed stupid debug printf.
+	
 2003-05-29	Joel Becker <joel.becker@oracle.com>
 
 	* include/linux/osmabi.h: Add gi_version.
